--- a/config/optional/block.block.islandora_starter_theme_content.yml
+++ b/config/optional/block.block.islandora_starter_theme_content.yml
@@ -4,9 +4,9 @@ dependencies:
   module:
     - system
   theme:
-    - bartik
-id: bartik_content
-theme: bartik
+    - islandora_starter_theme
+id: islandora_starter_theme_content
+theme: islandora_starter_theme
 region: content
 weight: 7
 provider: null
