--- a/modules/islandora_search/config/optional/block.block.subjectname.yml
+++ b/modules/islandora_search/config/optional/block.block.subjectname.yml
@@ -7,7 +7,7 @@ dependencies:
     - facets
     - system
   theme:
-    - bartik
+    - islandora_starter_theme
 id: subjectname
 theme: bartik
 region: sidebar_second
