--- a/modules/islandora_search/config/optional/block.block.physicalform.yml
+++ b/modules/islandora_search/config/optional/block.block.physicalform.yml
@@ -7,9 +7,9 @@ dependencies:
     - facets
     - system
   theme:
-    - bartik
+    - islandora_starter_theme
 id: physicalform
-theme: bartik
+theme: islandora_starter_theme
 region: sidebar_second
 weight: 0
 provider: null
