--- a/modules/islandora_search/config/optional/block.block.creatorsandcontributors.yml
+++ b/modules/islandora_search/config/optional/block.block.creatorsandcontributors.yml
@@ -8,9 +8,9 @@ dependencies:
     - islandora
     - system
   theme:
-    - bartik
+    - islandora_starter_theme
 id: creatorsandcontributors
-theme: bartik
+theme: islandora_starter_theme
 region: sidebar_second
 weight: 0
 provider: null
