--- a/config/install/context.context.openseadragon_block.yml
+++ b/config/install/context.context.openseadragon_block.yml
@@ -30,7 +30,7 @@ reactions:
         weight: '-1'
         iiif_manifest_url: 'http://localhost:8000/node/[node:nid]/book-manifest'
         context_mapping: {  }
-        theme: bartik
+        theme: islandora_starter_theme
         css_class: ''
         unique: 0
         context_id: openseadragon_block
@@ -40,7 +40,7 @@ reactions:
         label: 'Openseadragon block'
         provider: openseadragon
         label_display: visible
-        region: content
+        region: islandora_starter_theme
         weight: '0'
         iiif_manifest_url: 'http://localhost:8000/node/[node:nid]/book-manifest'
         context_mapping: {  }
