--- a/config/install/context.context.openseadragon_block.yml
+++ b/config/install/context.context.openseadragon_block.yml
@@ -40,11 +40,11 @@ reactions:
         label: 'Openseadragon block'
         provider: openseadragon
         label_display: visible
-        region: islandora_starter_theme
+        region: content
         weight: '0'
         iiif_manifest_url: 'http://localhost:8000/node/[node:nid]/book-manifest'
         context_mapping: {  }
-        theme: bartik
+        theme: islandora_starter_theme
         css_class: ''
         unique: 0
         context_id: openseadragon_block
